--- a/templates/base.html
+++ b/templates/base.html
@@ -16,44 +16,53 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-3">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="{% url 'home:home' %}">LibGliwice</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="{% url 'library:books_availability' %}">Sprawdź dostępność</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{% url 'library:libraries' %}">Biblioteki</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
+          <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Historia</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
+
+     {% if user.is_authenticated %}
+         <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Konto</a>
         </li>
+          <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{% url 'users:logout' %}">Wyloguj: {{ user }}</a>
+        </li>
+          {% else %}
+          <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{% url 'users:login' %}">Logowanie</a>
+        </li>
+            <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Rejestracja</a>
+        </li>
+          {% endif %}
+
+
       </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+
     </div>
   </div>
 </nav>
 
-{% block container %}
+{% block content %}
 
 {% endblock %}
+
+
+
+
+
 
 
 </body>
