added user registration

--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
           <a class="nav-link active" aria-current="page" href="{% url 'users:login' %}">Logowanie</a>
         </li>
             <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Rejestracja</a>
+          <a class="nav-link active" aria-current="page" href="{% url 'users:signup' %}">Rejestracja</a>
         </li>
           {% endif %}
 
