models correction, my library functionality added

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -1,8 +1,14 @@
 {% extends 'base.html' %}
 
 
-{% block container %}
-    :)
+{% block content %}
+<p style="text-align: center;">&nbsp;</p>
+<p><img style="display: block; margin-left: auto; margin-right: auto;" src="https://biblioteka.gliwice.pl/wp-content/uploads/2022/05/mbp_gliwice_logo.png" /></p>
+<p style="text-align: center;">&nbsp;</p>
+<h2 style="text-align: center;">Witaj na stronie LibGliwice!</h2>
+<p style="text-align: center;">&nbsp;</p>
+    <p style="text-align: center;">Aby sprawdzić dostępność książek udaj się na stronę <a href="https://integro.biblioteka.gliwice.pl/catalog">KATALOG INTEGRO</a></p>
+<p style="text-align: center;">Wyszukaj interesującą Cię pozycję</p>
+    <p style="text-align: center;">Wklej link na stronie <a href="http://127.0.0.1:8000/dashboard/">LibGliwice</a></p>
 
-    {{ list }}
 {% endblock %}
