--- a/collection/templates/collection/mylibrary.html
+++ b/collection/templates/collection/mylibrary.html
@@ -21,8 +21,7 @@
                 <td>{{ book.name }}</td>
                 <td>{{ book.author }}</td>
                 <td>{{ book.readbooks_set }}</td>
-                </td>
-                <td><a href="{% url 'library:bookremove' id=book.id %}" class="btn btn-danger">Usuń</a></td>
+                <td><a href="{% url 'collection:book_collection_remove' pk=book.pk %}" class="btn btn-danger">Usuń</a></td>
             </tr>
         {% empty %}
             <p>Lista jest pusta</p>
