views tests with pytest

--- a/collection/templates/collection/book_collection_add.html
+++ b/collection/templates/collection/book_collection_add.html
@@ -1,12 +1,15 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <form method="POST"> {% csrf_token %}
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <form method="POST"> {% csrf_token %}
 
-{#        Tytuł: <input type="text" name="title" value="{{ book.name }}">#}
-{#        Autor: <input type="text" name="author" value="{{ book.author }}">#}
-
-        Data przeczytania: <input type="date" name="date">
-    <button type="submit" class="btn btn-primary">Dodaj</button>
-    </form>
+                    Data przeczytania: <input type="date" name="date">
+                    <button type="submit" class="btn btn-primary">Dodaj</button>
+                </form>
+            </div>
+        </div>
+    </div>
 {% endblock %}
