--- a/collection/templates/collection/mylibrary.html
+++ b/collection/templates/collection/mylibrary.html
@@ -3,35 +3,40 @@
 
 {% block content %}
 
+    <div class="container">
+        <div class="row">
+            <div class="col">
 
 
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Tytuł</th>
+                        <th scope="col">Autor</th>
+                        <th scope="col">Data przeczytania</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for book in books %}
+                        <tr>
+                            <th scope="row">{{ forloop.counter }}</th>
+                            <td>{{ book.name }}</td>
+                            <td>{{ book.author }}</td>
+                            {% for date in date_read|in_books:book|in_users:user %}
+                                <td>{{ date.date }}</td>
+                            {% endfor %}
+                            <td><a href="{% url 'collection:book_collection_remove' pk=book.pk %}"
+                                   class="btn btn-danger">Usuń</a></td>
+                        </tr>
+                    {% empty %}
+                        <p>Lista jest pusta</p>
+                    {% endfor %}
 
-    <table class="table">
-        <thead>
-        <tr>
-            <th scope="col">#</th>
-            <th scope="col">Tytuł</th>
-            <th scope="col">Autor</th>
-            <th scope="col">Data przeczytania</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for book in books %}
-            <tr>
-                <th scope="row">{{ forloop.counter }}</th>
-                <td>{{ book.name }}</td>
-                <td>{{ book.author }}</td>
-                {% for date in date_read|in_books:book|in_users:user %}
-                <td>{{ date.date }}</td>
-                {% endfor %}
-                <td><a href="{% url 'collection:book_collection_remove' pk=book.pk %}" class="btn btn-danger">Usuń</a></td>
-            </tr>
-        {% empty %}
-            <p>Lista jest pusta</p>
-        {% endfor %}
-
-        </tbody>
-    </table>
-  <a href="{% url 'collection:book_collection_add_new'  %} " class="btn btn-info">Dodaj książkę</a>
-
+                    </tbody>
+                </table>
+                <a href="{% url 'collection:book_collection_add_new' %} " class="btn btn-info">Dodaj książkę</a>
+            </div>
+        </div>
+    </div>
 {% endblock %}
