--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -1,13 +1,17 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Login</h2>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h2>Login</h2>
 
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Login">
-</form>
-
-{#<a href="{% url 'dashboard' %}">Back to dashboard</a>#}
+                <form method="post">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <input type="submit" value="Login">
+                </form>
+            </div>
+        </div>
+    </div>
 {% endblock %}
