--- a/users/templates/registration/password_change_done.html
+++ b/users/templates/registration/password_change_done.html
@@ -1,7 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Password changed</h2>
-
-<a href="{% url 'dashboard' %}">Back to dashboard</a>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h2>Password changed</h2>
+            </div>
+        </div>
+    </div>
 {% endblock %}
