--- a/users/templates/registration/password_change_form.html
+++ b/users/templates/registration/password_change_form.html
@@ -1,13 +1,19 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Change password</h2>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h2>Change password</h2>
 
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Change">
-</form>
+                <form method="post">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <input type="submit" value="Change">
+                </form>
 
-<a href="{% url 'dashboard' %}">Back to dashboard</a>
+                <a href="{% url 'dashboard' %}">Back to dashboard</a>
+            </div>
+        </div>
+    </div>
 {% endblock %}
