--- a/users/templates/registration/signup.html
+++ b/users/templates/registration/signup.html
@@ -1,8 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
-<h2>Sign Up</h2>
-<form method="post">{% csrf_token %}
-{{ form.as_p }}
-<button type="submit">Sign Up</button>
-</form>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h2>Sign Up</h2>
+                <form method="post">{% csrf_token %}
+                    {{ form.as_p }}
+                    <button type="submit">Sign Up</button>
+                </form>
+            </div>
+        </div>
+    </div>
 {% endblock content %}
