--- a/users/templates/registration/password_change_done.html
+++ b/users/templates/registration/password_change_done.html
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <h2>Password changed</h2>
+                <h2>Zmieniono hasło</h2>
             </div>
         </div>
     </div>
