--- a/users/templates/registration/account.html
+++ b/users/templates/registration/account.html
@@ -1,23 +1,17 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="container">
-        <div class="row">
-            <div class="col">
+    <div class="p-3">
 
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                        <h5 class="card-title"><p>Witaj, {{ user.username|default:'Guest' }}!</p></h5>
-                        <p class="card-text"></p>
-                        <a href="{% url 'users:password_change' %}" class="btn btn-info">Zmień hasło</a>
-                        <a href="{% url 'users:logout' %}" class="btn btn-danger">Wyloguj</a>
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title"><p>Witaj, {{ user.username|default:'Guest' }}!</p></h5>
+                <p class="card-text"></p>
+                <a href="{% url 'users:password_change' %}" class="btn btn-info">Zmień hasło</a>
+                <a href="{% url 'users:logout' %}" class="btn btn-danger">Wyloguj</a>
 
-                    </div>
-                </div>
             </div>
         </div>
     </div>
-
-
 
 {% endblock %}
