--- a/users/templates/registration/password_change_form.html
+++ b/users/templates/registration/password_change_form.html
@@ -8,7 +8,7 @@
 
                 <form method="post">
                     {% csrf_token %}
-                    {{ form.as_p }}
+                    {{ form }}
                     <input type="submit" value="Change">
                 </form>
 
