changed menu display biblioteki->filie, libraries form translation

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
                         dostępność</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'library:libraries' %}">Biblioteki</a>
+                    <a class="nav-link active" aria-current="page" href="{% url 'library:libraries' %}">Filie</a>
                 </li>
                 {% if user.is_authenticated %}
                     <li class="nav-item">
