--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>LibGliwice {% block title %}{% endblock %}</title>
+    <link rel="icon" type="image/x-icon" href={% static './images/favicon/favicon.png' %}>
     <link rel="stylesheet" href="{% static './css/bootstrap.min.css' %}">
     <!-- link do staticów. ścieżka idzie od folderu static-->
     <script src="{% static './js/bootstrap.min.js' %}" async defer></script>
