demo version my library random populate

--- a/collection/templates/collection/book_collection_add.html
+++ b/collection/templates/collection/book_collection_add.html
@@ -8,5 +8,8 @@
                     <button type="submit" class="btn btn-primary">Dodaj</button>
                 </form>
             </div>
+    <div class="p-3">
+    Książka zostanie przeniesiona do "Moja biblioteka"
+    </div>
 
 {% endblock %}
