--- a/templates/base.html
+++ b/templates/base.html
@@ -67,6 +67,19 @@
 
 {% endblock %}
 
+{% if user.get_username == 'demo' %}
+<div class="container p-3">
+    <div class="row">
+        <div class="col">
+            <div class="alert alert-warning" role="alert">
+                Poruszasz się w wersji demo. Możesz dowolnie używać dostępnych opcji. W razie potrzeby w każdej
+                chwili możesz wygenerować nowe dane, klikając przycisk
+                <a href="{% url 'demo:demo' %}" class="btn btn-warning ">Generuj</a>
+            </div>
+        </div>
+    </div>
+</div>
+{% endif %}
 
 </body>
 </html>
