--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="{% static './css/bootstrap.min.css' %}">
     <!-- link do staticów. ścieżka idzie od folderu static-->
     <script src="{% static './js/bootstrap.min.js' %}" async defer></script>
+    <script src="{% static './js/main.js' %}" async defer></script>
     <!-- asynchronicznie dociąga i parsuje js. HTML generuje sie wcześniej -->
 </head>
 <body>
