instruction added to main page when in demo mode

--- a/templates/base.html
+++ b/templates/base.html
@@ -77,6 +77,10 @@
                 chwili możesz wygenerować nowe dane, klikając przycisk
                 <a href="{% url 'demo:demo' %}" class="btn btn-warning ">Generuj</a>
             </div>
+                    <div  class="m-1">
+
+            <a href="{% url 'home:instruction' %}" class="btn btn-outline-primary btn-lg">Zapoznaj się z instrukcją</a>
+        </div>
         </div>
     </div>
 </div>
