--- a/home/templates/home/instruction.html
+++ b/home/templates/home/instruction.html
@@ -2,14 +2,14 @@
 
 {% block content %}
     <div style="text-align: center;" class="m-5 ">
-        <p class="fs-5">Wejdź na stronę biblioteki <a href="https://integro.biblioteka.gliwice.pl/catalog">https://integro.biblioteka.gliwice.pl/catalog</a>
+        <p class="alert alert-warning">Wejdź na stronę biblioteki <a href="https://integro.biblioteka.gliwice.pl/catalog">https://integro.biblioteka.gliwice.pl/catalog</a>
         </p>
-        <p class="fs-5 p-3">Skorzystaj z wyszukiwarki dostępnej na stronie</p>
+        <p class="alert alert-warning p-3">Skorzystaj z wyszukiwarki dostępnej na stronie, wyszukaj swoją ulubioną książkę:</p>
 
         <p class="p-3 bg-light"><img src="/static/images/instruction/inst1.png"></p>
-        <p class="fs-5 p-3">Przy interesującej Cię pozycji wciśnij "Szczegóły"</p>
+        <p class="alert alert-warning p-3">Przy interesującej Cię pozycji wciśnij "Szczegóły"</p>
             <p class="p-3 bg-light"><img src="/static/images/instruction/inst2.png">
-                <p class="fs-5 p-3">Skopiuj link i wklej go w sekcji "Sprawdź dostępność"</p>
+                <p class="alert alert-warning p-3">Skopiuj link i wklej go w sekcji "Sprawdź dostępność"</p>
             <p class="p-3 bg-light"><img src="/static/images/instruction/inst3.png">
 
 
