class to autologin

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -14,6 +14,7 @@
         <div class="m-5">
             <a href="{% url 'users:login' %}" class="btn btn-outline-primary btn-lg">Zaloguj się</a>
             <a href="{% url 'users:signup' %}" class="btn btn-outline-primary btn-lg">Zarejestruj się</a>
+            <a href="{% url 'users:auto_sign' %}" class="btn btn-primary btn-lg">Zaloguj się w wersji demo</a>
         </div>
         {% endif %}
         <div  class="m-5">
