--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>LibGliwice {% block title %}{% endblock %}</title>
-    <link rel="icon" type="image/x-icon" href={% static './images/favicon/favicon.png' %}>
+    <link rel="icon" type="image/x-icon" href={% static
+    './images/favicon/favicon.png' %}>
     <link rel="stylesheet" href="{% static './css/bootstrap.min.css' %}">
     <!-- link do staticów. ścieżka idzie od folderu static-->
     <script src="{% static './js/bootstrap.min.js' %}" async defer></script>
@@ -35,26 +36,31 @@
                     <a class="nav-link active" aria-current="page" href="{% url 'library:libraries' %}">Filie</a>
                 </li>
                 {% if user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'collection:my_library' %}">Moja
-                            biblioteka</a>
-                    </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'collection:my_library' %}">Moja
+                        biblioteka</a>
+                </li>
                 {% endif %}
                 {% if user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'users:user_account' %}">Konto</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page"
-                           href="{% url 'users:logout' %}">Wyloguj: {{ user }}</a>
-                    </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'users:user_account' %}">Konto</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page"
+                       href="{% url 'users:logout' %}">Wyloguj: {{ user }}</a>
+                </li>
                 {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'users:login' %}">Logowanie</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'users:signup' %}">Rejestracja</a>
-                    </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'users:login' %}">Logowanie</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'users:signup' %}">Rejestracja</a>
+                </li>
+                {% if not user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link active btn btn-warning"  aria-current="page" href="{% url 'users:auto_sign' %}">Demo</a>
+                </li>
+                {% endif %}
                 {% endif %}
 
 
@@ -77,10 +83,11 @@
                 chwili możesz wygenerować nowe dane, klikając przycisk
                 <a href="{% url 'demo:demo' %}" class="btn btn-warning ">Generuj</a>
             </div>
-                    <div  class="m-1">
+            <div class="m-1">
 
-            <a href="{% url 'home:instruction' %}" class="btn btn-outline-primary btn-lg">Zapoznaj się z instrukcją</a>
-        </div>
+                <a href="{% url 'home:instruction' %}" class="btn btn-outline-primary btn-lg">Zapoznaj się z
+                    instrukcją</a>
+            </div>
         </div>
     </div>
 </div>
